--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body::before{
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(#e91e63,#ffc107);
+    background: linear-gradient(#009245,#FCEE21);
     clip-path: circle(22% at 30% 20%);
 }
 
@@ -36,7 +36,7 @@ body::after{
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(#ffffff,#da00ff);
+    background: linear-gradient(#000046,#1CB5E0);
     clip-path: circle(20% at 70% 90%);
 }
 
