--- a/style.css
+++ b/style.css
@@ -1,181 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&display=swap');
-
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Quicksand',sans-serif;
-}
-
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #091921;
-}
-
-
-
-body::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(#009245,#FCEE21);
-    clip-path: circle(22% at 30% 20%);
-}
-
-body::after{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(#000046,#1CB5E0);
-    clip-path: circle(20% at 70% 90%);
-}
-
-.container{
-    position: relative;
-    background: rgba(255,255,255,0.05);
-    border-radius: 6px;
-    overflow: hidden;
-    z-index: 10;
-    backdrop-filter: blur(15px);
-    border-top: 1px solid rgba(255,255,255,0.2);
-    border-left: 1px solid rgba(255,255,255,0.2);
-    box-shadow: 5px 5px 30px rgba(0,0,0,0.2);
-}
-
-.container .calculator{
-    position: relative;
-    display: grid;
-}
-
-.container .calculator .value{
-    grid-column: span 4;
-    height: 140px;
-    width:300px;
-    text-align:right;
-    border:none;
-    outline:none;
-    padding: 10px;
-    font-size: 30px;
-    background:transparent;
-    color: #fff;
-
-    border-bottom: 1px solid rgba(255,255,255,0.05);
-    border-right: 1px solid rgba(255,255,255,0.05);
-}
-
-.container .calculator span{
-    display: grid;
-    place-items:center;
-    height:75px;
-    width:75px;
-    color:#fff;
-    font-weight: 400px;
-    cursor:pointer;
-    font-size:20px;
-    user-select:none;
-
-    border-bottom: 1px solid rgba(255,255,255,0.05);
-    border-right: 1px solid rgba(255,255,255,0.05);
-    transition: 0.5s
-}
-
-.container .calculator span:hover{
-    transition:0s;
-    background:rgba(255,255,255,0.05)
-}
-
-.container .calculator span:active{
-    background:#14ff47;
-    color: #192f00;
-    font-size:24px;
-    font-weight:500;
-}
-
-.container .calculator .clear {
-    grid-column: span 2;
-    width:150px;
-    background: rgba(255,255,255,0.05);
-}
-
-.container .calculator .plus{
-    grid-row: span 2;
-    height:150px;
-}
-
-
-ul {
-    position:absolute;
-    top:90%;
-    left:15%;
-    transform: translate(-50%, -50%);
-    margin:0;
-    padding:0;
-    display:flex;
-}
-
-ul li {
-    list-style: none;
-}
-
-ul li a {
-    position: relative;
-    width:60px;
-    height:60px;
-    display:block;
-    text-align:center;
-    margin:0 10px;
-    border-radius: 50%;
-    padding: 6px;
-    box-sizing: border-box;
-    text-decoration:none;
-    box-shadow: 0 10px 15px rgba(0,0,0,0.3);
-    background: linear-gradient(0deg, #ddd, #fff);
-    transition: .5s;
-}
-
-ul li a:hover {
-    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-    text-decoration:none;
-}
-
-ul li a .fab {
-    widht: 100%;
-    height:100%;
-    display:block;
-    background: linear-gradient(0deg, #fff, #ddd);
-    border-radius: 50%;
-    line-height: calc(60px - 12px);
-    font-size:24px;
-    color: #262626;
-    transition: .5s;
-}
-
-ul li:nth-child(1) a:hover .fab {
-    color: #3b5998;
-}
-
-ul li:nth-child(2) a:hover .fab {
-    color: #00aced;
-}
-
-ul li:nth-child(3) a:hover .fab {
-    color: #dd4b39;
-}
-
-ul li:nth-child(4) a:hover .fab {
-    color: #007bb6;
-}
-
-ul li:nth-child(5) a:hover .fab {
-    color: #e4405f;
-}
+@import url(https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&display=swap);body::after,body::before{content:'';top:0;left:0;width:100%;position:absolute;height:100%}.container,body{overflow:hidden}body::after,body::before,ul{position:absolute}*,ul{margin:0;padding:0}body,ul{display:flex}*,ul li a{box-sizing:border-box}ul li a,ul li a .fab{display:block;transition:.5s}*{font-family:Quicksand,sans-serif}body{justify-content:center;align-items:center;min-height:100vh;background:#091921;backdrop-filter:blur(5px);user-select:none;cursor:none}body::before{background:linear-gradient(#009245,#fcee21);clip-path:circle(22% at 30% 20%)}body::after{background:linear-gradient(#000046,#1cb5e0);clip-path:circle(20% at 70% 90%)}.container{position:relative;background:rgba(255,255,255,.05);border-radius:45px;z-index:10;backdrop-filter:blur(15px);border-top:1px solid rgba(255,255,255,.2);border-left:1px solid rgba(255,255,255,.2);box-shadow:5px 5px 30px rgba(0,0,0,.2)}.container .calculator{position:relative;display:grid}.container .calculator .value{grid-column:span 4;height:140px;width:300px;text-align:right;border:none;outline:0;padding:10px;font-size:30px;background:0 0;color:#fff;border-bottom:1px solid rgba(255,255,255,.05);border-right:1px solid rgba(255,255,255,.05)}.cursor,ul li a,ul li a .fab{border-radius:50%}.container .calculator span{display:grid;place-items:center;height:75px;width:75px;color:#fff;font-weight:400px;cursor:pointer;font-size:20px;user-select:none;border-bottom:1px solid rgba(255,255,255,.05);border-right:1px solid rgba(255,255,255,.05);transition:.5s}.container .calculator span:hover{transition:none;background:rgba(221,170,196,.8)}.container .calculator .equal:hover{transition:none;background:rgba(227,197,75,.8)}.container .calculator .clear:hover{transition:none;background:rgba(93,129,240,.8)}.container .calculator span:active{background:#14ff47;color:#192f00;font-size:24px;font-weight:500}.container .calculator .clear{grid-column:span 2;width:150px;background:rgba(255,255,255,.05)}.container .calculator .plus{grid-row:span 2;height:150px}ul{top:90%;left:15%;transform:translate(-50%,-50%)}ul li{list-style:none}ul li a{position:relative;width:60px;height:60px;text-align:center;margin:0 10px;padding:6px;text-decoration:none;box-shadow:0 10px 15px rgba(0,0,0,.3);background:linear-gradient(0deg,#ddd,#fff)}ul li a:hover{box-shadow:0 2px 5px rgba(0,0,0,.3);text-decoration:none}ul li a .fab{widht:100%;height:100%;background:linear-gradient(0deg,#fff,#ddd);line-height:calc(60px - 12px);font-size:24px;color:#262626}ul li:first-child a:hover .fab{color:#3b5998}ul li:nth-child(2) a:hover .fab{color:#00aced}ul li:nth-child(3) a:hover .fab{color:#dd4b39}ul li:nth-child(4) a:hover .fab{color:#007bb6}ul li:nth-child(5) a:hover .fab{color:#e4405f}:root{--color-primary:#FBAB7E}.cursor{position:fixed;width:40px;height:40px;margin-left:-20px;margin-top:-20px;border:2px solid var(--color-primary);transition:transform .3s;transform-origin:center center;pointer-events:none;z-index:1000}.grow,.grow-small{transform:scale(4);background:#fff;mix-blend-mode:difference;border:none}.grow-small{transform:scale(2)}
